@@ -80,4 +80,4 @@ CORE_MODEL_CLASSES = [
 DEFAULT_TASK_DURATION = datetime.timedelta(days=10)
 DEFAULT_TASK_PRIORITY = 500
 
-DEFAULT_VERSION_TAKE = "MAIN"
+DEFAULT_VERSION_TAKE_NAME = "MAIN"
