@@ -3,7 +3,10 @@
 
 
 import unittest
-from stalker.core.models import Version
+from stalker.conf import defaults
+from stalker.core.models import (Version, Repository, Type, Project, Status,
+                                 StatusList, Sequence, Shot, Task, Link,
+                                 Comment)
 
 
 
@@ -17,7 +20,140 @@ class VersionTester(unittest.TestCase):
     
     #----------------------------------------------------------------------
     def setUp(self):
-        pass
+        """setup the test
+        """
+        
+        # statuses
+        self.test_status1 = Status(name="Status1", code="STS1")
+        self.test_status2 = Status(name="Status2", code="STS2")
+        self.test_status3 = Status(name="Status3", code="STS3")
+        self.test_status4 = Status(name="Status4", code="STS4")
+        self.test_status5 = Status(name="Status5", code="STS5")
+        
+        # status lists
+        self.test_project_status_list = StatusList(
+            name="Project Status List",
+            statuses=[
+                self.test_status1,
+                self.test_status2,
+                self.test_status3,
+                self.test_status4,
+                self.test_status5,
+            ],
+            target_entity_type=Project,
+        )
+        
+        self.test_sequence_status_list = StatusList(
+            name="Sequence Status List",
+            statuses=[
+                self.test_status1,
+                self.test_status2,
+                self.test_status3,
+                self.test_status4,
+                self.test_status5,
+            ],
+            target_entity_type=Sequence,
+        )
+        
+        self.test_shot_status_list = StatusList(
+            name="Shot Status List",
+            statuses=[
+                self.test_status1,
+                self.test_status2,
+                self.test_status3,
+                self.test_status4,
+                self.test_status5,
+            ],
+            target_entity_type=Shot,
+        )
+        
+        self.test_task_status_list = StatusList(
+            name="Task Status List",
+            statuses=[
+                self.test_status1,
+                self.test_status2,
+                self.test_status3,
+                self.test_status4,
+                self.test_status5,
+            ],
+            target_entity_type=Task,
+        )
+        
+        # repository
+        self.test_repo = Repository(
+            name="Test Repository",
+        )
+        
+        # a project type
+        self.test_project_type = Type(
+            name="Test",
+            target_entity_type=Project,
+        )
+        
+        # create a project
+        self.test_project = Project(
+            name="Test Project",
+            type=self.test_project_type,
+            status_list=self.test_project_status_list,
+            repository=self.test_repo,
+        )
+        
+        # create a sequence
+        self.test_sequence = Sequence(
+            name="Test Sequence",
+            code="SEQ1",
+            project=self.test_project,
+            status_list=self.test_sequence_status_list,
+        )
+        
+        # create a shot
+        self.test_shot1 = Shot(
+            code="SH001",
+            sequence=self.test_sequence,
+            status_list=self.test_shot_status_list,
+        )
+        
+        # create a group of Tasks for the shot
+        self.test_task1 = Task(
+            name="Task1",
+            task_of=self.test_shot1,
+            status_list=self.test_task_status_list,
+        )
+        
+        # a Link for the source_file
+        self.test_source_link = Link(
+            name="Link1",
+            path="/mnt/M/JOBs/TestProj/Seqs/TestSeq/Shots/SH001/FX/v001.ma",
+        )
+        
+        # a Link for the ouput file
+        self.test_output_link1 = Link(
+            name="Output Link 1",
+            path="/mnt/M/JOBs/TestProj/Seqs/TestSeq/Shots/SH001/FX/Outputs/"\
+                 "SH001_beauty_v001.###.exr"
+        )
+        
+        self.test_output_link2 = Link(
+            name="Output Link 2",
+            path="/mnt/M/JOBs/TestProj/Seqs/TestSeq/Shots/SH001/FX/Outputs/"\
+                 "SH001_occ_v001.###.exr"
+        )
+        
+        # now create a version for the Task
+        self.kwargs = {
+            "name": "Version1",
+            "take": "TestTake",
+            "source_file": self.test_source_link,
+            "outputs": [self.test_output_link1,
+                        self.test_output_link2,],
+            "task": self.test_task1,
+        }
+        
+        # and the Version
+        self.test_version = Version(**self.kwargs)
+        
+        # set the published to False
+        self.test_version.published = False
     
     
     
@@ -25,10 +161,12 @@ class VersionTester(unittest.TestCase):
     def test_take_argument_is_skipped_defaults_to_default_value(self):
         """testing if the take argument is skipped the take attribute is going
         to be set to the default value which is
-        stalker.conf.defaults.DEFAULT_VERSION_TAKE
+        stalker.conf.defaults.DEFAULT_VERSION_TAKE_NAME
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs.pop("take")
+        new_version = Version(**self.kwargs)
+        self.assertEqual(new_version.take, defaults.DEFAULT_VERSION_TAKE_NAME)
     
     
     
@@ -39,7 +177,9 @@ class VersionTester(unittest.TestCase):
         stalker.conf.defaults.DEFAULT_VERSION_TAKE
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["take"] = None
+        new_version = Version(**self.kwargs)
+        self.assertEqual(new_version.take, defaults.DEFAULT_VERSION_TAKE_NAME)
     
     
     
@@ -50,7 +190,9 @@ class VersionTester(unittest.TestCase):
         stalker.conf.defaults.DEFAULT_VERSION_TAKE
         """
         
-        self.fail("test is not implemented yet")
+        self.test_version.take = None
+        self.assertEqual(self.test_version.take,
+                         defaults.DEFAULT_VERSION_TAKE_NAME)
     
     
     
@@ -60,7 +202,8 @@ class VersionTester(unittest.TestCase):
         empty string
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["take"] = ""
+        self.assertRaises(ValueError, Version, **self.kwargs)
     
     
     
@@ -70,7 +213,7 @@ class VersionTester(unittest.TestCase):
         set to an empty string
         """
         
-        self.fail("test is not implemented yet")
+        self.assertRaises(ValueError, setattr, self.test_version, "take", "")
     
     
     
@@ -80,7 +223,16 @@ class VersionTester(unittest.TestCase):
         to a proper string
         """
         
-        self.fail("test is not implemented yet")
+        test_values = [
+            (1, "1"),
+            (1.2, "1.2"),
+            (["a list"], "a list"),
+            ({"a": "dict"}, "a dict")]        
+        for test_value in test_values:
+            self.kwargs["take"] = test_value[0]
+            new_version = Version(**self.kwargs)
+            
+            self.assertEqual(new_version.take, test_value[1])
     
     
     
@@ -90,7 +242,15 @@ class VersionTester(unittest.TestCase):
         converted to a proper string
         """
         
-        self.fail("test is not implemented yet")
+        test_values = [
+            (1, "1"),
+            (1.2, "1.2"),
+            (["a list"], "a list"),
+            ({"a": "dict"}, "a dict")]
+        
+        for test_value in test_values:
+            self.test_version.take = test_value[0]
+            self.assertEqual(self.test_version.take, test_value[1])
     
     
     
@@ -100,7 +260,8 @@ class VersionTester(unittest.TestCase):
         is formatted to an empty string
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["take"] = "##$½#$"
+        self.assertRaises(ValueError, Version, **self.kwargs)
     
     
     
@@ -110,7 +271,8 @@ class VersionTester(unittest.TestCase):
         is formatted to an empty string
         """
         
-        self.fail("test is not implemented yet")
+        self.assertRaises(ValueError, setattr, self.test_version, "take",
+                          "##$½#$")
     
     
     
@@ -120,7 +282,8 @@ class VersionTester(unittest.TestCase):
         skipped
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs.pop("version")
+        self.assertRaises(TypeError, Version, **self.kwargs)
     
     
     
@@ -130,17 +293,18 @@ class VersionTester(unittest.TestCase):
         None
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["version"] = None
+        self.assertRaises(TypeError, Version, **self.kwargs)
     
     
     
     #----------------------------------------------------------------------
-    def test_version_attribute_is_None(self):
-        """testing if a TypeError will be raised when the version attribute is
-        set to None
+    def test_version_attribute_is_read_only(self):
+        """testing if an AttributeError will be raised when the version
+        attribute is set to something
         """
         
-        self.fail("test is not implemented yet")
+        self.assertRaises(AttributeError, self.test_version, "version", 123)
     
     
     
@@ -150,17 +314,18 @@ class VersionTester(unittest.TestCase):
         0
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["version"] = 0
+        self.assertRaises(ValueError, Version, **self.kwargs)
     
     
     
-    #----------------------------------------------------------------------
-    def test_version_attribute_is_0(self):
-        """testing if a ValueError will be raised when the version attribute is
-        set to 0
-        """
+    ##----------------------------------------------------------------------
+    #def test_version_attribute_is_0(self):
+        #"""testing if a ValueError will be raised when the version attribute is
+        #set to 0
+        #"""
         
-        self.fail("test is not implemented yet")
+        #self.fail("test is not implemented yet")
     
     
     
@@ -170,17 +335,18 @@ class VersionTester(unittest.TestCase):
         negative
         """
         
-        self.fail("test is not implemented yet")
+        self.kwargs["version"] = -1
+        self.assertRaises(ValueError, Version, **self.kwargs)
     
     
     
-    #----------------------------------------------------------------------
-    def test_version_attribute_is_negative(self):
-        """testing if a ValueError will be raised when the version attribute is
-        negative
-        """
+    ##----------------------------------------------------------------------
+    #def test_version_attribute_is_negative(self):
+        #"""testing if a ValueError will be raised when the version attribute is
+        #negative
+        #"""
         
-        self.fail("test is not implemented yet")
+        #self.fail("test is not implemented yet")
     
     
     
@@ -189,7 +355,12 @@ class VersionTester(unittest.TestCase):
         """testing if nothing happens when the reviews attribute is set to None
         """
         
-        self.fail("test is not implemented yet")
+        # should work without giving any errors
+        self.test_version.reviews = None
+        
+        # and it should set it to an empty list (or something like a list)
+        self.assertIsInstance(self.test_version.reviews, list)
+        self.assertEqual(len(self.test_version), 0)
     
     
     
@@ -199,7 +370,7 @@ class VersionTester(unittest.TestCase):
         not a list instance
         """
         
-        self.fail("test is not implemented yet")
+        self.assertRaises(TypeError, setattr, self.test_version, "reviews", 1)
     
     
     
@@ -209,17 +380,8 @@ class VersionTester(unittest.TestCase):
         set to a list of other objects
         """
         
-        self.fail("test is not implemented yet")
-    
-    
-    
-    #----------------------------------------------------------------------
-    def test_reviews_attribute_is_set_to_something_other_than_a_list_of_Comment_instance(self):
-        """testing if a TypeError will be raised when the reviews attribute is
-        set to something other than a Comment instance
-        """
-        
-        self.fail("test is not implemented yet")
+        self.assertRaises(TypeError, setattr, self.test_version, "reviews",
+                          ["test", "reviews"])
     
     
     
@@ -228,7 +390,11 @@ class VersionTester(unittest.TestCase):
         """testing if the reviews attribute is working properly
         """
         
-        self.fail("test is not implemented yet")
+        # create a review
+        new_comment = Comment(
+            name="Test Comment",
+            
+        )
     
     
     
